force-app/main/default/objects/RBA_Exchange_Rate__c/RBA_Exchange_Rate__c.object-meta.xml
<CustomObject>
    <description>Exchange Rates modified Daily from RBA Data</description>
    <label>RBA Exchange Rate</label>
    <nameField>
        <label>RBA Exchange Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RBA Exchange Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>