force-app/main/default/objects/RBA_Exchange_Rate__c/fields/exchange_rate__c.field-meta.xml
<CustomField>
    <fullName>exchange_rate__c</fullName>
    <label>Exchange Rate AUD</label>
    <precision>15</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>