force-app/main/default/objects/RBA_Exchange_Rate__c/fields/Exchange_Rate_NZD__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate_NZD__c</fullName>
    <label>Exchange Rate NZD</label>
    <precision>15</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>