force-app/main/default/objects/RBA_Exchange_Rate__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>