force-app/main/default/objects/RBA_Exchange_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>exchange_rate__c</columns>
    <columns>Exchange_Rate_NZD__c</columns>
    <columns>External_Id__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>