force-app/main/default/objects/RBA_Exchange_Rate__c/listViews/Created_Date_TODAY.listView-meta.xml
<ListView>
    <fullName>Created_Date_TODAY</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Created Date TODAY</label>
</ListView>