force-app/main/default/objects/RBA_Exchange_Rate__c/listViews/Mario_rates.listView-meta.xml
<ListView>
    <fullName>Mario_rates</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>exchange_rate__c</columns>
    <columns>Exchange_Rate_NZD__c</columns>
    <columns>External_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>Mario rates</label>
</ListView>